# SVG-SAMurai

./: .gitignore  README.md  app.py  audit_report.md  plan.md  pyproject.toml  requirements.txt
src/: model.py  vectorizer.py  xml_manager.py
tests/: test_app.py  test_model.py  test_vectorizer.py  test_xml_manager.py
