[project]
name = "svg-samurai"
version = "0.1.0"

description = "SVG-SAMurai"
authors = [
    {name = "Jules"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch (>=2.0.0)",
    "transformers (>=4.30.0)",
    "streamlit (>=1.20.0)",
    "lxml (>=4.9.0)",
    "opencv-python (>=4.8.0)",
    "pillow (>=9.0.0)",
    "cairosvg (>=2.7.0)",
    "streamlit-image-coordinates (>=0.1.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=7.4.0)",
    "pytest-mock (>=3.10.0)"
]
